Feature: user can choose the best answer

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,10 +1,13 @@
 li= answer.body
+-if current_user&.author_of?(@question)
+  p= link_to 'Best answer', best_answer_answer_path(answer), method: :post, remote: true
+
 - if current_user&.author_of?(answer)
   p = link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id }
   p = link_to 'Delete answer', answer_path(answer), method: :delete, remote: true
 
 = form_with model: answer, class: 'hidden', html: { id: "edit-answer-#{answer.id}" }, local: false do |f|
-  = f.label :body, 'Your answer'
+  = f.label :body, 'Edit answer'
   = f.text_area :body
   = f.submit 'Save'
 
