Update other_answers method calls in views

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -14,4 +14,4 @@ hr
   - if @question.best_answer
     = render 'answers/best_answer', resource: @best_answer
   h3 All Answers
-  = render @other_answers
+  = render @question.other_answers
