--- a/app/views/answers/best_answer.js.erb
+++ b/app/views/answers/best_answer.js.erb
@@ -1,3 +1,3 @@
 <% if @best_answer %>
-  $('.answers').html('<%= j render 'answers/best_answer', resource: @best_answer %>').append('<%= j render @other_answers %>');
+  $('.answers').html('<%= j render 'answers/best_answer', resource: @best_answer %>').append('<%= j render @question.other_answers %>');
 <% end %>
