--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,5 +1,10 @@
 .question
   = render @question
+
+- if @question.files.attached?
+  - @question.files.each do |file|
+    p= link_to file.filename.to_s, url_for(file)
+
 hr
 
 .answer-errors
