--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -10,13 +10,17 @@ hr
 .answer-errors
   = render 'shared/errors', resource: @answer
 
-= form_with model: [@question, @answer], class: 'new-answer', local: false do |f|
-  = f.label :body, 'Your answer'
-  = f.text_area :body
-  = f.submit 'Answer'
-
 .answers
   - if @question.best_answer
     = render 'answers/best_answer', resource: @best_answer
   h3 All Answers
   = render @question.other_answers
+
+= form_with model: [@question, @answer], class: 'new-answer', local: false do |f|
+  p
+    = f.label :body, 'Your answer'
+    = f.text_area :body
+  p
+    = f.label :files
+    = f.file_field :files, multiple: true
+  p= f.submit 'Answer'
