--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -11,8 +11,17 @@ p= @question.body
 = render 'shared/flash_message'
 
 = form_with model: @question, class: 'hidden', html: { id: "edit-question-#{@question.id}" }, local: false do |f|
-  = f.label :title
-  = f.text_field :title
-  = f.label :body
-  = f.text_area :body
-  = f.submit 'Save'
+  p
+    = f.label :title
+    = f.text_field :title
+  p
+    = f.label :body
+    = f.text_area :body
+  p
+    = f.label :files
+    = f.file_field :files, multiple: true
+  p= f.submit 'Save'
+
+- if question.files.attached?
+  - question.files.each do |file|
+    p= link_to file.filename.to_s, url_for(file)
