User can delete attachments to his questions and answers

--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -22,6 +22,4 @@ p= @question.body
     = f.file_field :files, multiple: true
   p= f.submit 'Save'
 
-- if question.files.attached?
-  - question.files.each do |file|
-    p= link_to file.filename.to_s, url_for(file)
+= render 'shared/attachments', resource: question
