--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,7 +1,5 @@
 li= answer.body
-- if @answer.files.attached?
-  - @answer.files.each do |file|
-    p= link_to file.filename.to_s, url_for(file)
+= render 'shared/attachments', resource: answer
 
 -if current_user&.author_of?(@question)
   p= link_to 'Best answer', best_answer_answer_path(answer), method: :post, remote: true
