--- a/app/views/shared/_attachments.html.slim
+++ b/app/views/shared/_attachments.html.slim
@@ -1,6 +1,6 @@
 - if resource.files.attached?
   - resource.files.each do |file|
-    p id="attachment_#{file.id}"
-    = link_to file.filename.to_s, url_for(file)
-    - if current_user&.author_of?(file.record)
-      p= link_to 'Delete file', attachment_path(file), method: :delete, remote: true
+    div id="attachment_#{file.id}"
+        = link_to file.filename.to_s, url_for(file)
+        - if current_user&.author_of?(file.record)
+          p= link_to 'Delete file', attachment_path(file), method: :delete, remote: true
